kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: DATABASE_HOST
              value: localhost
            - name: POSTGRES_DB
              value: test
            - name: POSTGRES_PASSWORD
              value: test
            - name: POSTGRES_USER
              value: test
          image: postgres:14.2-alpine
          name: db
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /foo
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-data
status: {}
