kubernetes/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - env:
            - name: ADMIN_ADRESS
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_ADRESS
                  name: env
            - name: ADMIN_EMAIL
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_EMAIL
                  name: env
            - name: ADMIN_NAME
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_NAME
                  name: env
            - name: ADMIN_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_PASSWORD
                  name: env
            - name: ADMIN_PHONE
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_PHONE
                  name: env
            - name: ADMIN_SURNAME
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_SURNAME
                  name: env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: env
            - name: NODE_ENV
              value: production
            - name: POSTGRES_DB
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_DB
                  name: env
            - name: POSTGRES_HOST
              value: db
            - name: POSTGRES_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PASSWORD
                  name: env
            - name: POSTGRES_PORT
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_PORT
                  name: env
            - name: POSTGRES_USER
              valueFrom:
                configMapKeyRef:
                  key: POSTGRES_USER
                  name: env
            - name: SENDGRID_API_KEY
              valueFrom:
                configMapKeyRef:
                  key: SENDGRID_API_KEY
                  name: env
          image: domingocast/nodeserver:0.7
          name: web
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
